Fix letter spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -22,6 +22,7 @@ body>div {
     text-align: center;
 }
 .name {
+    letter-spacing: -1px;
     font-weight: bold;
     font-size: 4rem;
 }
